infra/k8s/prod/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
    env: prod
spec:
  selector:
    app: frontend
  ports:
    - port: 3000
      targetPort: 3000
